# swagger_server/swagger/swagger.yaml
@@ -456,22 +456,21 @@ components:
           type: boolean
           default: false
       example:
-        start_time: 2000-01-23T04:56:07.000Z
+        start_time: 2000-01-23T04:56:07.000+00:00
+        quantity: 0
         name: name
-        end_time: 2000-01-23T04:56:07.000Z
+        end_time: 2000-01-23T04:56:07.000+00:00
         id: id
-        egress_port:
-          node: urn:sdx:port:amlight.net:Novi07
-          name: urn:sdx:port:amlight.net:Novi07:10
-          short_name: "10"
-          id: id
-          status: up
+        egress_port: null
         ingress_port:
           node: urn:sdx:port:amlight.net:Novi06
           name: urn:sdx:port:amlight.net:Novi06:9
           short_name: "9"
           id: id
+          state: enabled
           status: up
+        complete: false
+        status: success
       xml:
         name: Order
     User:
@@ -551,11 +550,13 @@ components:
             name: urn:sdx:port:amlight.net:Novi06:9
             short_name: "9"
             id: id
+            state: enabled
             status: up
           - node: urn:sdx:port:amlight.net:Novi06
             name: urn:sdx:port:amlight.net:Novi06:9
             short_name: "9"
             id: id
+            state: enabled
             status: up
         - name: urn:sdx:node:amlight.net:Novi06
           short_name: Novi06
@@ -569,65 +570,43 @@ components:
             name: urn:sdx:port:amlight.net:Novi06:9
             short_name: "9"
             id: id
+            state: enabled
             status: up
           - node: urn:sdx:port:amlight.net:Novi06
             name: urn:sdx:port:amlight.net:Novi06:9
             short_name: "9"
             id: id
+            state: enabled
             status: up
         time_stamp: 2000-01-23T04:56:07.000+00:00
         name: amLight
         links:
-        - total_bandwidth: 146582.15146899645333178341388702392578125
+        - residual_bandwidth: 596213.79545492655597627162933349609375
           packet_loss: 23.0213588693476509661195450462400913238525390625
+          bandwidth: 146582.15146899645333178341388702392578125
           latency: 563738.10192566714249551296234130859375
           name: miami-Boca.amLight.sdx
-          available_bandwidth: 596213.79545492655597627162933349609375
           short_name: Miami-BocaRaton
           id: id
           availability: 70.61401241503108394681476056575775146484375
+          state: enabled
           ports:
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:9
-            label_range:
-            - label_range
-            - label_range
-            short_name: "9"
-            id: id
-            status: up
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:10
-            label_range:
-            - label_range
-            - label_range
-            short_name: "10"
-            id: id
-            status: up
-        - total_bandwidth: 146582.15146899645333178341388702392578125
+          - null
+          - null
+          status: up
+        - residual_bandwidth: 596213.79545492655597627162933349609375
           packet_loss: 23.0213588693476509661195450462400913238525390625
+          bandwidth: 146582.15146899645333178341388702392578125
           latency: 563738.10192566714249551296234130859375
           name: miami-Boca.amLight.sdx
-          available_bandwidth: 596213.79545492655597627162933349609375
           short_name: Miami-BocaRaton
           id: id
           availability: 70.61401241503108394681476056575775146484375
+          state: enabled
           ports:
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:9
-            label_range:
-            - label_range
-            - label_range
-            short_name: "9"
-            id: id
-            status: up
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:10
-            label_range:
-            - label_range
-            - label_range
-            short_name: "10"
-            id: id
-            status: up
+          - null
+          - null
+          status: up
         id: id
         version: 1
       xml:
@@ -667,11 +646,13 @@ components:
           name: urn:sdx:port:amlight.net:Novi06:9
           short_name: "9"
           id: id
+          state: enabled
           status: up
         - node: urn:sdx:port:amlight.net:Novi06
           name: urn:sdx:port:amlight.net:Novi06:9
           short_name: "9"
           id: id
+          state: enabled
           status: up
       xml:
         name: node
@@ -694,11 +675,11 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/port'
-        total_bandwidth:
+        bandwidth:
           maximum: 1000000
           minimum: 1
           type: number
-        available_bandwidth:
+        residual_bandwidth:
           maximum: 1000000
           minimum: 1
           type: number
@@ -714,32 +695,26 @@ components:
           maximum: 100
           minimum: 0
           type: number
+        state:
+          type: string
+          example: enabled
+        status:
+          type: string
+          example: up
       example:
-        total_bandwidth: 146582.15146899645333178341388702392578125
+        residual_bandwidth: 596213.79545492655597627162933349609375
         packet_loss: 23.0213588693476509661195450462400913238525390625
+        bandwidth: 146582.15146899645333178341388702392578125
         latency: 563738.10192566714249551296234130859375
         name: miami-Boca.amLight.sdx
-        available_bandwidth: 596213.79545492655597627162933349609375
         short_name: Miami-BocaRaton
         id: id
         availability: 70.61401241503108394681476056575775146484375
+        state: enabled
         ports:
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:9
-            label_range:
-            - label_range
-            - label_range
-            short_name: "9"
-            id: id
-            status: up
-          - node: urn:sdx:port:amlight.net:Novi06
-            name: urn:sdx:port:amlight.net:Novi06:10
-            label_range:
-            - label_range
-            - label_range
-            short_name: "10"
-            id: id
-            status: up
+        - null
+        - null
+        status: up
       xml:
         name: link
     port:
@@ -761,6 +736,9 @@ components:
         node:
           type: string
           example: urn:sdx:port:amlight.net:Novi06
+        state:
+          type: string
+          example: enabled
         status:
           type: string
           example: up
@@ -769,6 +747,7 @@ components:
         name: urn:sdx:port:amlight.net:Novi06:9
         short_name: "9"
         id: id
+        state: enabled
         status: up
       xml:
         name: port
@@ -849,3 +828,4 @@ components:
       name: api_key
       in: header
       x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_api_key
+
